new chages have been done: gulp - bootstrap - less

--- a/resources/assets/less/bootstrap/variables.less
+++ b/resources/assets/less/bootstrap/variables.less
@@ -5,13 +5,13 @@
 // Variables
 // --------------------------------------------------
 
-@ps-text:         #607848;
-@ps-nav-bg:       #607848;
-@ps-link-text:    #789048;
-@ps-nav-text:     #F0F0D8;
-@ps-well-bg:      #CCCCCC;
-@ps-jumbotron-bg: #C0D860;
-@ps-bg:           #F0F0D8;
+@ps-text:         #666666;
+@ps-nav-bg:       #AEC249;
+@ps-link-text:    #CBD86C;
+@ps-nav-text:     #E9F1BE;
+@ps-well-bg:      #E9F1BE;
+@ps-jumbotron-bg: #ECF2D6;
+@ps-bg:           #FFFFFF;
 
 //== Colors
 //
