--- a/public/css/fix.css
+++ b/public/css/fix.css
@@ -13,6 +13,10 @@ button {
     /*border: none;*/
 }
 
+.backgroundles {
+    background: none !important;
+}
+
 .nopadding-hor {
     padding-left: 0 !important;
     padding-right: 0 !important;
@@ -25,4 +29,8 @@ button {
 
 .borderless {
     border: none !important;
+}
+
+.perm_exps {
+    display: none !important;
 }
